--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,13 +16,13 @@
     </ul>
     <ul class='lists-right'>
       <%# deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
-      <%# <% if user_signed_in? %> %>
-        <%# <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li> %>
-        <%# <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" %></li> %>
-      <%# <% else %> %>
+      <% if user_signed_in? %>
+        <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+        <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" %></li>
+      <% else %>
         <li><%= link_to 'ログイン', "#", class: "login" %></li>
         <li><%= link_to '新規登録', "#", class: "sign-up" %></li>
-        <% end %>
+      <% end %>
       <%# //deviseを導入できたら、ログインの有無で表示が変わるように分岐しましょう%>
     </ul>
   </div>
