--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -126,17 +126,16 @@
     <%= link_to '新規投稿商品', "#", class: "subtitle" %>
     <ul class='item-lists'>
 
-      <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% @items.each do |item| %>
         <li class='list'>
           <%= link_to(item_path(item.id)) do %>
           <div class='item-img-content'>
             <%= image_tag item.image, class: "item-img" %>
-          <%# 商品が売れていればsold outを表示しましょう %>
+          <% if item.order.present?%>
             <div class='sold-out'>
               <span>Sold Out!!</span>
             </div>
-          <%# //商品が売れていればsold outを表示しましょう %>
+          <% end %>
           </div>
           <div class='item-info'>
             <h3 class='item-name'>
@@ -153,10 +152,7 @@
           <% end %>
         </li>
       <% end %>
-      <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
-      <%# 商品がない場合は以下のダミー商品が表示されるようにしましょう %>
-      <%# 商品がある場合は表示されないようにしましょう %>
       <% if @item_number == 0 %>
         <li class='list'>
           <%= link_to '#' do %>
@@ -176,8 +172,6 @@
           <% end %>
         </li>
       <% end %>
-      <%# //商品がある場合は表示されないようにしましょう %>
-      <%# //商品がない場合は以下のダミー商品が表示されるようにしましょう %>
     </ul>
   </div>
   <%# /商品一覧 %>
